almost working, must fix the uneven places

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -15,10 +15,13 @@
   border-radius: 4px;
   text-align: center;
   display: inline-block;
+  height: 369px;
 }
 
 .places h2 {
   font-size: 30px;
+  text-align: center;
+  display: inline;
 }
 
 .place-display {
@@ -26,12 +29,17 @@
 }
 
 .price_by_night {
-  color: #FF5A5F
+  color: #FF5A5F;
   border: 4px solid #FF5A5F;
+  border-radius: 50%;
+  display: inline-block;
   min-width: 60px;
   height: 60px;
   font-size: 30px;
-  border-radius: 50%;
+  position: relative;
+  left: 89px;
+  text-align: center;
+  line-height: 55px;
 }
 
 .information {
@@ -39,24 +47,29 @@
   border-top: 1px solid #DDDDDD;
   border-bottom: 1px solid #DDDDDD;
   display: flex;
-  align-self: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .guesticon {
   width: 50px;
   height: 50px;
+  margin: auto;
   background-image: url(../images/icon_group.png);
 }
 
 .roomicon {
   width: 50px;
   height: 50px;
+  margin: auto;
   background-image: url(../images/icon_bed.png);
+
 }
 
 .bathroomicon {
   width: 50px;
   height: 50px;
+  margin: auto;
   background-image: url(../images/icon_bath.png);
 }
 
